--- a/CursoWindowsForms/CursoWindowsForms.csproj
+++ b/CursoWindowsForms/CursoWindowsForms.csproj
@@ -83,6 +83,12 @@
     <Compile Include="Frm_Mascara.Designer.cs">
       <DependentUpon>Frm_Mascara.cs</DependentUpon>
     </Compile>
+    <Compile Include="Frm_Princial.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_Princial.Designer.cs">
+      <DependentUpon>Frm_Princial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Frm_ValidaCPF.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -111,6 +117,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_Mascara.resx">
       <DependentUpon>Frm_Mascara.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_Princial.resx">
+      <DependentUpon>Frm_Princial.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_ValidaCPF.resx">
       <DependentUpon>Frm_ValidaCPF.cs</DependentUpon>
