--- a/CursoWindowsForms/CursoWindowsForms.csproj
+++ b/CursoWindowsForms/CursoWindowsForms.csproj
@@ -121,6 +121,12 @@
     <Compile Include="Frm_Principal_Menu_MDI.Designer.cs">
       <DependentUpon>Frm_Principal_Menu_MDI.cs</DependentUpon>
     </Compile>
+    <Compile Include="Frm_Principal_Menu_UC.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_Principal_Menu_UC.Designer.cs">
+      <DependentUpon>Frm_Principal_Menu_UC.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Formularios Curso 1\Frm_DemonstacaoKey.resx">
@@ -149,6 +155,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_Principal_Menu_MDI.resx">
       <DependentUpon>Frm_Principal_Menu_MDI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_Principal_Menu_UC.resx">
+      <DependentUpon>Frm_Principal_Menu_UC.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
