--- a/CursoWindowsForms/CursoWindowsForms.csproj
+++ b/CursoWindowsForms/CursoWindowsForms.csproj
@@ -73,17 +73,23 @@
     <Compile Include="Formularios Curso 1\Frm_DemonstacaoKey.Designer.cs">
       <DependentUpon>Frm_DemonstacaoKey.cs</DependentUpon>
     </Compile>
-    <Compile Include="Formularios Curso 1\Frm_HellowWorld.cs">
+    <Compile Include="Formularios Curso 1\Frm_HelloWorld.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Formularios Curso 1\Frm_HellowWorld.Designer.cs">
-      <DependentUpon>Frm_HellowWorld.cs</DependentUpon>
+    <Compile Include="Formularios Curso 1\Frm_HelloWorld.Designer.cs">
+      <DependentUpon>Frm_HelloWorld.cs</DependentUpon>
     </Compile>
     <Compile Include="Formularios Curso 1\Frm_Mascara.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Formularios Curso 1\Frm_Mascara.Designer.cs">
       <DependentUpon>Frm_Mascara.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Frm_HelloWorld_UC.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Frm_HelloWorld_UC.Designer.cs">
+      <DependentUpon>Frm_HelloWorld_UC.cs</DependentUpon>
     </Compile>
     <Compile Include="Frm_Principal.cs">
       <SubType>Form</SubType>
@@ -132,11 +138,14 @@
     <EmbeddedResource Include="Formularios Curso 1\Frm_DemonstacaoKey.resx">
       <DependentUpon>Frm_DemonstacaoKey.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Formularios Curso 1\Frm_HellowWorld.resx">
-      <DependentUpon>Frm_HellowWorld.cs</DependentUpon>
+    <EmbeddedResource Include="Formularios Curso 1\Frm_HelloWorld.resx">
+      <DependentUpon>Frm_HelloWorld.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios Curso 1\Frm_Mascara.resx">
       <DependentUpon>Frm_Mascara.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_HelloWorld_UC.resx">
+      <DependentUpon>Frm_HelloWorld_UC.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_Principal.resx">
       <DependentUpon>Frm_Principal.cs</DependentUpon>
