--- a/CursoWindowsForms/CursoWindowsForms.csproj
+++ b/CursoWindowsForms/CursoWindowsForms.csproj
@@ -115,6 +115,30 @@
     <Compile Include="Formularios Curso 2\Frm_Mascara_UC.Designer.cs">
       <DependentUpon>Frm_Mascara_UC.cs</DependentUpon>
     </Compile>
+    <Compile Include="Frm_MenuFlutuante.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_MenuFlutuante.Designer.cs">
+      <DependentUpon>Frm_MenuFlutuante.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Frm_MouseCaptura.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_MouseCaptura.Designer.cs">
+      <DependentUpon>Frm_MouseCaptura.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Frm_MouseCursor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_MouseCursor.Designer.cs">
+      <DependentUpon>Frm_MouseCursor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Frm_MouseEventos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_MouseEventos.Designer.cs">
+      <DependentUpon>Frm_MouseEventos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Frm_Principal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -206,6 +230,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios Curso 2\Frm_Mascara_UC.resx">
       <DependentUpon>Frm_Mascara_UC.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_MenuFlutuante.resx">
+      <DependentUpon>Frm_MenuFlutuante.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_MouseCaptura.resx">
+      <DependentUpon>Frm_MouseCaptura.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_MouseCursor.resx">
+      <DependentUpon>Frm_MouseCursor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_MouseEventos.resx">
+      <DependentUpon>Frm_MouseEventos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_Principal.resx">
       <DependentUpon>Frm_Principal.cs</DependentUpon>
