--- a/CursoWindowsForms/CursoWindowsForms.csproj
+++ b/CursoWindowsForms/CursoWindowsForms.csproj
@@ -321,6 +321,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Imagens\Cadastros.png" />
     <Content Include="Imagens\Chave.png" />
     <Content Include="Imagens\DeleteAll.png" />
     <Content Include="Imagens\DeleteLeft.png" />
@@ -339,8 +340,10 @@
     <Content Include="Imagens\Frm_ValidaCPF2.png" />
     <Content Include="Imagens\Frm_ValidaSenha.ico" />
     <Content Include="Imagens\Frm_ValidaSenha.png" />
+    <Content Include="Imagens\money.png" />
     <Content Include="Imagens\Ponto_de_Interrogacao.ico" />
     <Content Include="Imagens\Ponto_de_Interrogacao.png" />
+    <Content Include="Imagens\user.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CursoWindowsFormsBiblioteca\CursoWindowsFormsBibliotecas.csproj">
