--- a/CursoWindowsForms/CursoWindowsForms.csproj
+++ b/CursoWindowsForms/CursoWindowsForms.csproj
@@ -115,34 +115,34 @@
     <Compile Include="Formularios Curso 2\Frm_Mascara_UC.Designer.cs">
       <DependentUpon>Frm_Mascara_UC.cs</DependentUpon>
     </Compile>
-    <Compile Include="Frm_CadastroCliente_UC.cs">
+    <Compile Include="Formularios Curso 3\Frm_CadastroCliente_UC.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Frm_CadastroCliente_UC.Designer.cs">
+    <Compile Include="Formularios Curso 3\Frm_CadastroCliente_UC.Designer.cs">
       <DependentUpon>Frm_CadastroCliente_UC.cs</DependentUpon>
     </Compile>
-    <Compile Include="Frm_MenuFlutuante.cs">
+    <Compile Include="Formularios Curso 3\Frm_MenuFlutuante.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Frm_MenuFlutuante.Designer.cs">
+    <Compile Include="Formularios Curso 3\Frm_MenuFlutuante.Designer.cs">
       <DependentUpon>Frm_MenuFlutuante.cs</DependentUpon>
     </Compile>
-    <Compile Include="Frm_MouseCaptura.cs">
+    <Compile Include="Formularios Curso 3\Frm_MouseCaptura.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Frm_MouseCaptura.Designer.cs">
+    <Compile Include="Formularios Curso 3\Frm_MouseCaptura.Designer.cs">
       <DependentUpon>Frm_MouseCaptura.cs</DependentUpon>
     </Compile>
-    <Compile Include="Frm_MouseCursor.cs">
+    <Compile Include="Formularios Curso 3\Frm_MouseCursor.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Frm_MouseCursor.Designer.cs">
+    <Compile Include="Formularios Curso 3\Frm_MouseCursor.Designer.cs">
       <DependentUpon>Frm_MouseCursor.cs</DependentUpon>
     </Compile>
-    <Compile Include="Frm_MouseEventos.cs">
+    <Compile Include="Formularios Curso 3\Frm_MouseEventos.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Frm_MouseEventos.Designer.cs">
+    <Compile Include="Formularios Curso 3\Frm_MouseEventos.Designer.cs">
       <DependentUpon>Frm_MouseEventos.cs</DependentUpon>
     </Compile>
     <Compile Include="Frm_Principal.cs">
@@ -237,19 +237,19 @@
     <EmbeddedResource Include="Formularios Curso 2\Frm_Mascara_UC.resx">
       <DependentUpon>Frm_Mascara_UC.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Frm_CadastroCliente_UC.resx">
+    <EmbeddedResource Include="Formularios Curso 3\Frm_CadastroCliente_UC.resx">
       <DependentUpon>Frm_CadastroCliente_UC.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Frm_MenuFlutuante.resx">
+    <EmbeddedResource Include="Formularios Curso 3\Frm_MenuFlutuante.resx">
       <DependentUpon>Frm_MenuFlutuante.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Frm_MouseCaptura.resx">
+    <EmbeddedResource Include="Formularios Curso 3\Frm_MouseCaptura.resx">
       <DependentUpon>Frm_MouseCaptura.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Frm_MouseCursor.resx">
+    <EmbeddedResource Include="Formularios Curso 3\Frm_MouseCursor.resx">
       <DependentUpon>Frm_MouseCursor.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Frm_MouseEventos.resx">
+    <EmbeddedResource Include="Formularios Curso 3\Frm_MouseEventos.resx">
       <DependentUpon>Frm_MouseEventos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_Principal.resx">
@@ -327,6 +327,7 @@
     <Content Include="Imagens\DeleteLeft.png" />
     <Content Include="Imagens\DeleteRight.png" />
     <Content Include="Imagens\DeleteTab.png" />
+    <Content Include="Imagens\ExcluirBarra.png" />
     <Content Include="Imagens\Frm_DemonstracaoKey.ico" />
     <Content Include="Imagens\Frm_DemonstracaoKey.png" />
     <Content Include="Imagens\Frm_HelloWorld.ico" />
@@ -340,6 +341,7 @@
     <Content Include="Imagens\Frm_ValidaCPF2.png" />
     <Content Include="Imagens\Frm_ValidaSenha.ico" />
     <Content Include="Imagens\Frm_ValidaSenha.png" />
+    <Content Include="Imagens\LimparBarra.png" />
     <Content Include="Imagens\money.png" />
     <Content Include="Imagens\Ponto_de_Interrogacao.ico" />
     <Content Include="Imagens\Ponto_de_Interrogacao.png" />
