--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/CursoWindowsFormsBiblioteca/DataBases/Fichario.mdf
+/CursoWindowsFormsBiblioteca/DataBases/Fichario_log.ldf
