--- a/CursoWindowsFormsBiblioteca/CursoWindowsFormsBiblioteca.csproj
+++ b/CursoWindowsFormsBiblioteca/CursoWindowsFormsBiblioteca.csproj
@@ -60,12 +60,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ByteBankDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ByteBankDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Classes\Cep.cs" />
     <Compile Include="Classes\Cliente.cs" />
+    <Compile Include="DataBases\FicharioSQLServer.cs" />
     <Compile Include="Cls_Uteis.cs" />
     <Compile Include="DataBases\Fichario.cs" />
     <Compile Include="DataBases\FicharioDB.cs" />
     <Compile Include="DataBases\LocalDBClass.cs" />
+    <Compile Include="DataBases\SQLServerClass.cs" />
     <Compile Include="FicharioDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -80,6 +87,17 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="ByteBankDataSet.xsc">
+      <DependentUpon>ByteBankDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="ByteBankDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>ByteBankDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="ByteBankDataSet.xss">
+      <DependentUpon>ByteBankDataSet.xsd</DependentUpon>
+    </None>
     <None Include="FicharioDataSet.xsc">
       <DependentUpon>FicharioDataSet.xsd</DependentUpon>
     </None>
