--- a/CursoWindowsFormsBiblioteca/Properties/Settings.settings
+++ b/CursoWindowsFormsBiblioteca/Properties/Settings.settings
@@ -10,5 +10,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\DataBases\Fichario.mdf;Integrated Security=True</Value>
     </Setting>
+    <Setting Name="ByteBankConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;ConnectionString&gt;Data Source=sgmgabc10837;Initial Catalog=ByteBank;User ID=sa;Password=Banco#2025#cgp;TrustServerCertificate=True&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=sgmgabc10837;Initial Catalog=ByteBank;User ID=sa;Password=Banco#2025#cgp;TrustServerCertificate=True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
