--- a/CursoWindowsFormsBiblioteca/app.config
+++ b/CursoWindowsFormsBiblioteca/app.config
@@ -6,5 +6,8 @@
         <add name="CursoWindowsFormsBiblioteca.Properties.Settings.FicharioConnectionString"
             connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\DataBases\Fichario.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="CursoWindowsFormsBiblioteca.Properties.Settings.ByteBankConnectionString"
+            connectionString="Data Source=sgmgabc10837;Initial Catalog=ByteBank;User ID=sa;Password=Banco#2025#cgp;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
