--- a/CursoWindowsFormsBiblioteca/app.config
+++ b/CursoWindowsFormsBiblioteca/app.config
@@ -3,10 +3,10 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="CursoWindowsFormsBiblioteca.Properties.Settings.FicharioConnectionString"
+        <add name="ConexaoLocalDB"
             connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\DataBases\Fichario.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
-        <add name="CursoWindowsFormsBiblioteca.Properties.Settings.ByteBankConnectionString"
+        <add name="ConexaoSQLServer"
             connectionString="Data Source=sgmgabc10837;Initial Catalog=ByteBank;User ID=sa;Password=Banco#2025#cgp;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
