--- a/CursoWindowsForms/App.config
+++ b/CursoWindowsForms/App.config
@@ -3,4 +3,12 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+	<connectionStrings>
+		<add name="ConexaoLocalDB"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\DataBases\Fichario.mdf;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+		<add name="ConexaoSQLServer"
+            connectionString="Data Source=sgmgabc10837;Initial Catalog=ByteBank;User ID=sa;Password=Banco#2025#cgp;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+	</connectionStrings>
 </configuration>
