--- a/CursoWindowsForms/App.config
+++ b/CursoWindowsForms/App.config
@@ -1,14 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
 	<connectionStrings>
-		<add name="ConexaoLocalDB"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\DataBases\Fichario.mdf;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-		<add name="ConexaoSQLServer"
-            connectionString="Data Source=sgmgabc10837;Initial Catalog=ByteBank;User ID=sa;Password=Banco#2025#cgp;TrustServerCertificate=True"
-            providerName="System.Data.SqlClient" />
-	</connectionStrings>
+  <add name="ConexaoLocalDB" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\DataBases\Fichario.mdf;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+  <add name="ConexaoSQLServer" connectionString="Data Source=sgmgabc10837;Initial Catalog=ByteBank;User ID=sa;Password=Banco#2025#cgp;TrustServerCertificate=True"
+   providerName="System.Data.SqlClient" />
+  <add name="CursoWindowsForms.Properties.Settings.ByteBankConnectionString"
+   connectionString="Data Source=sgmgabc10837;Initial Catalog=ByteBank;User ID=sa;Password=Banco#2025#cgp;TrustServerCertificate=True"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
 </configuration>
